Added new background and logos

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
   }
 
   body {
-    margin: 7%;
-    background: silver;
+    max-width: 100vh;
+    margin: 10%;
+    background-image: url("bkg.bmp");
+    background-repeat: repeat;
   }
 
   .window {
@@ -72,10 +74,10 @@
             Connect with me on my social media using the buttons below.
           </p>
           <a href="https://twitter.com/0xollie" target="_blank">
-            <button>Follow me on Twitter</button>
+            <button>Follow me on Twitter <img src="twitter.png" width="10px" height="10px"> </button>
           </a>
           <a href="http://linkedin.com/in/oliver-collins/" target="_blank">
-            <button>Connect with me on LinkedIn</button>
+            <button>Connect on LinkedIn <img src="linkedin.png" width="10px" height="10px"></button>
           </a>
           <p>
             Below is my list of projects and companies I work with
@@ -83,13 +85,13 @@
           <fieldset>
             <legend>the list</legend>
             <div class="field-row">
-              <a href="https://www.arkoselabs.com/" target="_blank">Arkose Labs (Current Employer)</a>
+              <a href="https://www.arkoselabs.com/" target="_blank">Arkose Labs (Current employer)</a>
             </div>
             <div class="field-row">
-              <a href="https://pizzaroulette.net/" target="_blank">Pizza Roulette (I'm a Co-Founder)</a>
+              <a href="https://pizzaroulette.net/" target="_blank">Pizza Roulette (I'm a co-founder)</a>
             </div>
             <div class="field-row">
-              <a href="https://qutwhitehats.club/" target="_blank">QUT White Hats (I founded a uni club)</a>
+              <a href="https://qutwhitehats.club/" target="_blank">QUT White Hats (I founded a cybersecurity club)</a>
             </div>
           </fieldset>
         </center>
