--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <title>ocollins.me</title>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://unpkg.com/98.css" />
 </head>
 <style>
@@ -17,7 +18,6 @@
   }
 
   body {
-    max-width: 100vh;
     margin: 10%;
     background-image: url("bkg.bmp");
     background-repeat: repeat;
@@ -64,7 +64,6 @@
         </div>
       </div>
       <div class="window-body">
-        <center>
           <img src="headshot.png" width="100%" height="100%">
           <p>You've reached the personal website of</p>
           <h4>Oliver Collins</h4>
@@ -94,7 +93,6 @@
               <a href="https://qutwhitehats.club/" target="_blank">QUT White Hats (I founded a cybersecurity club)</a>
             </div>
           </fieldset>
-        </center>
       </div>
     </div>
     <div id="closed" class="window" style="width: 300px;">
